--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,11 +2,13 @@
 
 <li>
     <article class="post">
-        <a href="{% url "post-detail-page" slug='the-mountains' %}">
-            <img src="{% static 'blog/images/mountains.jpg' %}" alt="Mountain Hiking" />
+        <a href="{% url "post-detail-page" post.slug %}">
+            <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}" />
             <div class="post__content">
-                <h3>Mountain Hiking</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi consequatur similique, corporis totam repudiandae culpa quod tenetur laborum voluptatem autem dicta cum, quaerat aut sequi dolore cupiditate fugiat natus! Tempora!</p>
+                <h3>{{ post.title }}</h3>
+                <p>
+                    {{ post.exerpt }}
+                </p>
             </div>
         </a>
     </article>
