--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block title %} 
-This post title
+    {{ post.title }}
 {% endblock title %} 
 
 {% block css_files %}
@@ -11,16 +11,18 @@ This post title
 
 {% block content %}
     <section id="summary">
-        <h2>Post title</h2>
+        <h2>{{ post.title }}</h2>
         <article>
-            <img src="{% static 'blog/images/mountains.jpg' %}" alt="Post title">
-            <address>by Kamil</address>
-            <div>last updated on: <time>July 9th 2011</time> </div>
+            <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}">
+            <address>by {{ post.author }}</address>
+            <div>last updated on: <time>{{ post.date|date:"d M Y" }}</time> </div>
         </article>
     </section>
 
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi quis delectus iure sapiente eum sed consequatur. Quia, maxime quis. Aut veritatis in fuga numquam recusandae perspiciatis eos, sequi molestiae temporibus!</p>
+        <p>
+            {{ post.content|linebreaks }}
+        </p>
     </main>
 
 {% endblock %}
