added aggregation and slug fix

--- a/books/book_outlet/templates/book_outlet/index.html
+++ b/books/book_outlet/templates/book_outlet/index.html
@@ -5,7 +5,10 @@
 {% block content %}
     <ul>
             {% for book in books %}
-                <li><a href=" {{ book.get_absolute_url }} ">{{ book.title }} (Rating {{ book.ranting }})</a></li>
+                <li><a href=" {{ book.get_absolute_url }} ">{{ book.title }} (Rating: {{ book.rating }})</a></li>
             {% endfor %}</li>
     </ul>
+    <hr>
+    <p>Total number of books: {{ total_number_of_books }}</p>
+    <p>Average rating {{ average_rating.rating__avg }} </p>
 {% endblock content %}
