--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -12,16 +12,21 @@
 {% block content %}
     <section id="summary">
         <h2>{{ post.title }}</h2>
+        <div>
+            {% for tag in post_tags %}
+                <span class="tag">{{tag.caption}}</span>
+            {% endfor %}
+        </div>
         <article>
-            <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}">
-            <address>by {{ post.author }}</address>
+            <img src="{% static 'blog/images/'|add:post.image_name %}" alt="{{ post.title }}">
+            <address>by <a href="mailto:{{post.author.email_address}}"> {{ post.author }}</a></address>
             <div>last updated on: <time>{{ post.date|date:"d M Y" }}</time> </div>
         </article>
     </section>
 
     <main>
         <p>
-            {{ post.content|linebreaks }}
+            {{ post.conent|linebreaks }}
         </p>
     </main>
 
