--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,15 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href=" {% static 'reviews/styles.css' %} ">
 </head>
 <body>
     <form action="/" method="POST">
         {% csrf_token %}
-        {% if has_error %}
-            <p>This form has an error.</p>
-        {% endif %}
-        <label for="username">Your name</label>
-        <input type="text" name="username" id="username">
+
+        {% for field in form %}
+            <div class="form-control {% if form.field.errors %}errors{% endif %}">
+                {{ field.label_tag }}
+                {{ field }}
+                {{ field.errors }}
+            </div>
+        {% endfor %}
+
         <button type="submit">Send</button>
     </form>
 </body>
