--- a/feedback/reviews/templates/reviews/review_list.html
+++ b/feedback/reviews/templates/reviews/review_list.html
@@ -1,13 +1,11 @@
-{% extends 'reviews/base.html' %}
+{% extends "reviews/base.html" %}
 
-{% block title %}All reviews{% endblock title %}
+{% block title %}All Reviews{% endblock %}
 
 {% block content %}
-
-    <ul>
-        {% for review in reviews %}
-            <li>{{ review.user_name }} (Rating: {{ review.rating }})</li>
-        {% endfor %}
-    </ul>
-
-{% endblock content %}
+  <ul>
+    {% for review in reviews %}
+      <li>{{ review.user_name }} (Rating: {{ review.rating }})</li>
+    {% endfor %}
+  </ul>
+{% endblock %}
