--- a/feedback/reviews/templates/reviews/single_review.html
+++ b/feedback/reviews/templates/reviews/single_review.html
@@ -6,4 +6,11 @@
   <h1>{{ review.user_name }}</h1>
   <p>Rating: {{ review.rating }}</p>
   <p>{{ review.review_text }}</p>
+  <p>id: {{ review.id }}</p>
+  <form action="/reviews/favorite" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="review_id" value="{{ review.id }}">
+    <button>Favorite</button>
+  </form>
+  
 {% endblock %}
