added comment form styling

--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -30,4 +30,21 @@
         </p>
     </main>
 
+    <section id="comment-form">
+        <h2>Your comment:</h2>
+        <form>
+
+            {% for form_field in comment_form %}
+                <div class="form-control">
+                    {{ form_field.label_tag }}
+                    {{ form_field }}
+                    {{ form_field.errors }}
+
+                </div>
+            {% endfor %}
+            
+            <button>Submit</button>
+        </form>
+    </section>
+
 {% endblock %}
