--- a/my_site/blog/static/blog/post-detail.css
+++ b/my_site/blog/static/blog/post-detail.css
@@ -119,3 +119,62 @@ body {
     border-radius: 6px;
     border: 1px solid #ccc;
   }
+
+  .errorlist {
+    list-style: none;
+    margin: 0.5rem 0;
+    padding: 0;
+    color: #d6000b;
+  }
+
+  .ivalid label {
+    color: #d6000b;
+  }
+  .invalid textarea,
+  .invalid input {
+    border-color: #d6000b;
+    background-color: #ee6a70;
+  }
+
+  #alert {
+    margin: 8rem auto 3rem auto;
+    border: 1px solid #d6000b;
+    background-color: #ee6a70;
+    padding: 1rem;
+    max-width: 40rem;
+    width: 90%;
+  }
+
+  #alert a {
+    text-decoration: none;
+    border: 1ps solid #d6000b;
+    background-color: #d6000b;
+    color: white;
+    padding: 0.25rem 1.5rem;
+    border-radius: 6px;
+  }
+
+  #comments {
+    margin: 3rem auto;
+    width: 90%;
+    max-width: 80rem;
+    border-radius: 12px;
+    background-color: white;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    padding: 1rem 2rem;    
+  }
+
+  #comments ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  #comments li {
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #ccc;
+  }
+  
+  #comments li:last-of-type {
+    border-bottom: none;
+  }
