--- a/my_site/blog/templates/blog/post-detail.html
+++ b/my_site/blog/templates/blog/post-detail.html
@@ -9,7 +9,20 @@
   <link rel="stylesheet" href="{% static "blog/post-detail.css" %}" />
 {% endblock css_files %}
 
+
+
 {% block content %}
+
+
+{% if comment_form.errors %}
+<div id="alert">
+    <h2>Saving comment failed!</h2>
+    <p>Please check the comment section below</p>
+    <a href="#comment-form">Fix!</a>
+</div>
+{% endif %}
+
+
     <section id="summary">
         <h2>{{ post.title }}</h2>
         <div>
@@ -24,18 +37,36 @@
         </article>
     </section>
 
+
     <main>
         <p>
             {{ post.conent|linebreaks }}
         </p>
     </main>
 
+
+<section id="comments">
+    <ul>
+        {% for comment in comments %}
+            <li>
+                <h2>{{ comment.user_name }}</h2>
+                <p>{{ comment.text|linebreaks }}</p>
+            </li>
+        {% endfor %}
+    </ul>
+</section>
+
+
     <section id="comment-form">
         <h2>Your comment:</h2>
-        <form>
-
+        <form 
+            action="{% url 'post-detail-page' post.slug %}" 
+            method="post"
+        >
+            {% csrf_token %}
             {% for form_field in comment_form %}
-                <div class="form-control">
+                <div class="form-control {% if form_field.errors %}invalid{% endif %} ">
+
                     {{ form_field.label_tag }}
                     {{ form_field }}
                     {{ form_field.errors }}
