--- a/my_site/blog/static/blog/post-detail.css
+++ b/my_site/blog/static/blog/post-detail.css
@@ -178,3 +178,21 @@ body {
   #comments li:last-of-type {
     border-bottom: none;
   }
+
+  #read-later {
+    margin: 2rem 0;
+  }
+
+  #read-later button {
+    background-color: transparent;
+    border: 1px solid white;
+    padding: 0.5rem 2rem;
+    font: inherit;
+    color: white;
+  }
+
+  #read-later button:hover,
+  #read-later button:active {
+    background-color: white;
+    color: #4e03b1;
+  }
